--- a/index.html
+++ b/index.html
@@ -66,21 +66,6 @@
             text-align: justify;
         }
 
-        .cta {
-            background: #007bff; /* Couleur bleu */
-            color: #fff;
-            padding: 15px 30px;
-            text-align: center;
-            border-radius: 8px;
-            cursor: pointer;
-            display: inline-block;
-            transition: background-color 0.3s ease;
-        }
-
-        .cta:hover {
-            background: #0056b3; /* Couleur bleu plus foncé au survol */
-        }
-
         footer {
             background: linear-gradient(to right, #007bff, #00d2ff);
             color: #fff;
@@ -115,11 +100,6 @@
             .main-content h2 {
                 font-size: 1.8rem;
             }
-
-            .cta {
-                font-size: 1.1rem;
-                padding: 12px 25px;
-            }
         }
     </style>
 </head>
@@ -135,9 +115,12 @@
             <h2>Générez des revenus avec la formation IA LEBD</h2>
             <p>Apprenez à vendre des produits digitaux et à générer des revenus en ligne. Notre programme inclut des vidéos, des cours complets et l'accès à un groupe privé.</p>
             <p><strong>Prix :</strong> 49€</p>
-            <div class="cta">
-                <a href="#" style="color: #fff; text-decoration: none; font-weight: bold; font-size: 1.2rem;">Acheter maintenant</a>
+            <div class="ecsp ecsp-SingleProduct-v2 ecsp-Product ec-Product-696847254" itemtype="http://schema.org/Product" data-single-product-id="696847254">
+                <div class="ecsp-title" itemprop="name" style="display:none;" content="Style informatique ia ofm"></div>
+                <div customprop="addtobag"></div>
             </div>
+            <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?108465307&data_platform=singleproduct_v2" charset="utf-8"></script>
+            <script type="text/javascript">xProduct()</script>
         </div>
     </div>
 
